--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="/studio-banca-dati-polizia-stato-2022/assets/index.c26eecad.js"></script>
-    <link rel="stylesheet" href="/studio-banca-dati-polizia-stato-2022/assets/index.e8b1ddab.css">
+    <script type="module" crossorigin src="/studio-banca-dati-polizia-stato-2022/assets/index.64ee7d9d.js"></script>
+    <link rel="stylesheet" href="/studio-banca-dati-polizia-stato-2022/assets/index.f1053a7c.css">
   </head>
   <body>
     <div id="root"></div>
